--- a/app/views/admin/products/_product.html.erb
+++ b/app/views/admin/products/_product.html.erb
@@ -11,7 +11,7 @@
     <%= product.category.name %>
   </td>
   <td>
-    <%= product.price %>
+    <%= Money.ca_dollar(product.price).format(no_cents_if_whole:true) %>
   </td>
   <td>
     <%= product.quantity %>
