--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -16,6 +16,7 @@
       </thead>
       <tbody>
         <% enhanced_cart.each do |item| %>
+         
           <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %>
         <% end %>
       </tbody>
@@ -25,7 +26,7 @@
             TOTAL:
           </th>
           <th>
-            <%= cart_subtotal_cents / 100.0 %>
+            <%= Money.ca_dollar(cart_subtotal_cents).format(no_cents_if_whole:true)  %>
           </th>
         </tr>
       </tfoot>
