--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -5,6 +5,10 @@
   </header>
 
   <div class="panel panel-default items">
+   <% if cart.size == 0 %>
+        <h4>Your Jungle cart is empty , no item to show</h4>
+        <p>Continue shopping on Jungle <a href='products#index'> homepage</a></p>
+        <% else %>
     <table class="table table-bordered">
       <thead>
         <tr>
@@ -16,9 +20,8 @@
       </thead>
       <tbody>
         <% enhanced_cart.each do |item| %>
-         
           <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %>
-        <% end %>
+          <% end %>
       </tbody>
       <tfoot>
         <tr>
@@ -31,8 +34,9 @@
         </tr>
       </tfoot>
     </table>
+     <% end %>
   </div>
-
+  <% if cart.size > 0 %>
   <div class="row">
     <div class="col-xs-12">
       <%= form_tag orders_path do %>
@@ -49,5 +53,6 @@
       <% end %>
     </div>
   </div>
+  <% end %>
 
 </section>
