--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -20,4 +20,9 @@
   <aside class="price">
     <%=Money.ca_dollar(product.price).format(no_cents_if_whole:true) %>
   </aside>
+  <% if product.quantity == 0%> 
+   <aside class="sold-out">
+   <p> SOLD OUT! </p>
+   <% end %>
+  </aside>
 </article>
