--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,6 +6,34 @@
 
   <div class="order-summary jumbotron">
     <h4>Thank you for your order!</h4>
+    <h4>Your email : <%= @order.email%></h4>
+    <tbody>
+    
+ <table class="table table-bordered">
+  <thead>
+        <tr>
+          <th colspan="2">Product</th>
+           <th>Unit Price</th>
+          <th>Quantity</th>
+          <th>Price</th>
+        </tr>
+  </thead>
+  <tbody>
+    <% @order.line_items.each do |item| %>   
+        <%= render 'item', product: item.product, quantity: item[:quantity].to_i %>
+          <% end %>
+  </tbody>
+  <tfoot>
+        <tr>
+          <th colspan="4">
+            TOTAL:
+          </th>
+          <th>
+            <%= Money.ca_dollar(@order.total_cents).format(no_cents_if_whole:true)  %>
+          </th>
+        </tr>
+      </tfoot>
+  </table>
   </div>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
