add categories admin feature

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -18,7 +18,7 @@
       <div class="caption">
         <h3>Product Categories</h3>
         <p><%= @total_categories%></p>
-        <p><a href="#" class="btn btn-primary" role="button">Categories</a></p>
+        <p><a href="/admin/categories" class="btn btn-primary" role="button">Categories</a></p>
       </div>
     </div>
   </div>
