--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -17,6 +17,7 @@
         <li>
           <%= link_to 'About', "about"  %>
         </li>
+       
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             Categories
@@ -27,8 +28,42 @@
               <li><%= link_to category.name, category %></li>
             <% end %>
           </ul>
+
+        <li>
+         <% if current_user %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+
+            <span class="text-secondary"> <%= current_user.email %></span>
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Logout", '/logout' %></li>
+          </ul>
+             <% else %>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+
+            <span class="text-secondary">Account</span>
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li><%= link_to 'Login', '/login' %></li>
+            <li>
+              <%= link_to 'Signup', '/signup' %>
+            </li>
+          </ul>
+          
         </li>
+        
+       
+        
+        
+        
+
+        <% end %>
+      
       </ul>
+       
       <ul class="nav navbar-nav navbar-right">
        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -47,7 +82,13 @@
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
           <% end %>
         </li>
+        <li>
+        </li>
       </ul>
     </div>
   </div>
 </nav>
+ 
+
+
+
