--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -15,7 +15,7 @@
           <%= link_to 'Home', :root %>
         </li>
         <li>
-          <%= link_to 'About', "about"  %>
+          <%= link_to 'About', "../about"  %>
         </li>
        
         <li class="dropdown">
